# Metal-Hydra

./: .gitignore  Cargo.toml  README.md  battle_cnn_augmented.mpk  model-1.mpk  model-10.mpk  model-11.mpk  model-12.mpk  model-13.mpk  model-14.mpk  model-15.mpk  model-17.mpk  model-18.mpk  model-19.mpk  model-2.mpk  model-21.mpk  model-27.mpk  model-3.mpk  model-32.mpk  model-37.mpk  model-4.mpk  model-41.mpk  model-44.mpk  model-46.mpk  model-5.mpk  model-55.mpk  model-6.mpk  model-7.mpk  model-70.mpk  model-8.mpk  model-9.mpk  transformer_value.mpk  v1model-1.mpk  v1model-12.mpk  v1model-2.mpk  v1model-24.mpk  v1model-6.mpk  value-model-25.mpk
battle_server/src/: main.rs
burn_ai_model/: Cargo.toml
burn_ai_model/src/: lib.rs  new_cnn.rs  transformer.rs  transformer_winprob.rs
data_grabbing/src/: main.rs
preprocess/: Cargo.toml
preprocess/src/: hydra_main.rs  main.rs
pure_search_battle_server/: Cargo.toml
pure_search_battle_server/src/: engine.rs  main.rs
training/: Cargo.toml
training/src/: __main.rs  hydra_main.rs  main.rs
