[package]
name = "training"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { workspace = true, features = [
    "train",
    "wgpu",
    "autodiff",
    "cuda",
    "tui",
] }
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
rand = "0.8" # For shuffling
burn_ai_model.workspace = true
memmap2 = "0.9.9"
bytemuck = { version = "1.24.0" }
